@@ -18,7 +18,7 @@ rm -r -f server/solr/zoo_data
 rm -r -f server/solr/collection1/data
 rm -f server/server.log
 
-ant example dist
+ant server dist
 
 cp -r -f server server2
 cp -r -f server server3
